methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:1: error: Missing closing brace `}' assumed here
override def run() {def faireV(c:Color) 
^PatternPicture:1: error: expected start of definition
override def run() {def faireV(c:Color) 
         ^